update for twilio

--- a/Server/views/index.handlebars
+++ b/Server/views/index.handlebars
@@ -3,7 +3,9 @@
         <input id="input" type="text" placeholder="Input your message" style="background-color:transparent;font-size: 300%;padding: 5px;text-align:center">
         <br><br>
         <button class="pure-button" onclick="encode()">Encode</button>
+        <button class="pure-button" onclick="encodeTwilio()">Encode to SMS</button>
         <button class="pure-button" onclick="decode()">Decode</button>
+        <button class="pure-button" onclick="decodeTwilio()">Decode to SMS</button>
         <br>
         <p class="splash-subhead" id="output">
             
