--- a/Server/views/about.handlebars
+++ b/Server/views/about.handlebars
@@ -17,6 +17,9 @@
 			<section>
 				<p>Me too, but HBO won't give me the index files</p>
 			</section>
+			<section>
+				<img src="img/pi.jpg" width="50%">
+			</section>
 		</section>
 
 		<section>
